# youbot_applications

./: README.md
joint_configurator/: CMakeLists.txt  package.xml
joint_configurator/config/: arm-1.cfg  arm-2.cfg  arm-3.cfg  arm-4.cfg
joint_configurator/config_bad/: arm-1.cfg  arm-2.cfg  arm-3.cfg  arm-4.cfg  arm-5.cfg
joint_configurator/config_old/: arm-2.cfg  arm-5.cfg
joint_configurator/src/: ArmConfigurator.cpp
